--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   dio: ^4.0.4
+  mocktail: ^0.2.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.7  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
